# jira-agent

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
app/: Dockerfile  alembic.ini  config.py  database.py  exceptions.py  logger.py  main.py  models.py  requirements.txt  schemas.py
app/agent/config/: example_prompts.json  prompts.py  settings.py
app/agent/core/: base.py  callbacks.py  executor.py
app/agent/llm/: models.py
app/agent/tools/: base.py  jira.py  triage.py
app/health/: routes.py
app/jira/: models.py  routes.py  schemas.py  services.py
app/migrations/: env.py
app/migrations/versions/: 001_create_jira_requests.py
app/routes/: health.py  jira.py  test.py
app/scripts/: run_migrations.sh  start.sh
app/services/: jira_service.py  test_service.py
app/utils/: jira_utils.py  model_utils.py  system_prompts.json
mesop/: Dockerfile  requirements.txt
mesop/src/: main.py
mesop/src/utils/: api_utils.py  config.py  ui_components.py
postman/: AI Jira Assistant.postman_collection.json
tests/: conftest.py  test_api.py
