[project]
name = "jira-agent"
version = "0.1.0"
description = "AI-powered Jira Assistant with FastAPI backend and Mesop frontend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Kenan Agyel", email = "kenanagyel@gmail.com" }
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.25",
    "psycopg2-binary==2.9.9",
    "langchain==0.1.16",
    "langchain-openai==0.1.3",
    "atlassian-python-api==3.41.16",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "httpx==0.26.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "alembic==1.13.1",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "isort==5.13.2",
    "mypy==1.8.0",
    "ruff==0.1.9",
    "pre-commit==3.6.0",
    "pytest-cov==4.1.0",
]

[project.urls]
Repository = "https://github.com/kenanagyel/jira-agent.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C",   # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
]
ignore = [
    "E501",    # Line length violations
    "B008",    # Do not perform function call in argument defaults
    "RET504",  # Unnecessary variable assignment before return
]
exclude = [
    "mesop/*",  # Exclude mesop directory from all checks
]

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "migrations/",
]
